tests/purs/failing/ClassHeadNoVTA5.out
Error found:
in module [33mMain[0m
at tests/purs/failing/ClassHeadNoVTA5.purs:8:15 - 8:29 (line 8, column 15 - line 8, column 29)

  No type class instance was found for
  [33m                     [0m
  [33m  Main.MultiFdBidi t0[0m
  [33m                   t1[0m
  [33m                     [0m
  The instance head contains unknown type variables. Consider using visible type application(s):
  [33m                                   [0m
  [33m  useMultiFdBidi @tyNotAppearInBody[0m
  [33m                                   [0m
  [33m                            [0m
  [33m  useMultiFdBidi @norThisOne[0m
  [33m                            [0m

while checking that expression [33museMultiFdBidi[0m
  has type [33mInt[0m
in value declaration [33mmultiFdBidi[0m

where [33mt0[0m is an unknown type
      [33mt1[0m is an unknown type

See https://github.com/purescript/documentation/blob/master/errors/NoInstanceFound.md for more information,
or to contribute content related to this error.

